# sbmod-grandarm
#######
# changelog
+ addition
* change
- removal

v0.5 2017-01-29
+ craftables
+ more treasurepools
* mace knockback and swing timing
* repaired big little mace whoops
* baton rework
* cane rework
* club rework
* greataxe rework

v0.4 2017-01-24
+ 1h mace variant
* rectangular books

v0.3 2017-01-08
* npclub fix
- npc weapon alt-abilities

v0.2a 2017-01-06
+ QSEXT inclusion

v0.2 2017-01-06
+ branding
+ steamID
* ability tweaks

v0.1 2017-01-02
+ baton
+ cane
+ club
+ greataxe
+ greatsword
+ mace
+ quarterstaff redux
+ shortspear
+ armcannon
+ longbow
+ spellbook