@@ -5,6 +5,9 @@
 * change
 - removal
 
+vur
++ weaponbag treasurepools for GDRWC fix
+
 v0.5 2017-01-29
 + craftables
 + more treasurepools
